manifest/03-carts-db-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: carts-db
    name: carts-db
    version: v0.1.0
  name: carts-db
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carts-db
      name: carts-db
      version: v0.1.0
  template:
    metadata:
      labels:
        app: carts-db
        name: carts-db
        version: v0.1.0
    spec:
      containers:
      - image: mongo:4.4
        name: carts-db
        ports:
        - containerPort: 27017
          name: mongo
        securityContext:
          capabilities:
            add:
            - CHOWN
            - SETGID
            - SETUID
            drop:
            - all
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      nodeSelector:
        kubernetes.io/os: linux
      volumes:
      - emptyDir:
          medium: Memory
        name: tmp-volume
