manifest/13-orders-db-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: orders-db
    name: orders-db
    version: v0.1.0
  name: orders-db
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-db
      name: orders-db
      version: v0.1.0
  template:
    metadata:
      labels:
        app: orders-db
        name: orders-db
        version: v0.1.0
    spec:
      containers:
      - image: mongo:4.4
        name: orders-db
        ports:
        - containerPort: 27017
          name: mongo
        resources:
          limits:
            cpu: 450m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        securityContext:
          capabilities:
            add:
            - CHOWN
            - SETGID
            - SETUID
            drop:
            - all
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      nodeSelector:
        kubernetes.io/os: linux
      volumes:
      - emptyDir:
          medium: Memory
        name: tmp-volume
